# Battleship

./: CMakeLists.txt  README.md  main.cpp
MVC/: AiPlayer.cpp  AiPlayer.h  Attack.cpp  Attack.h  AttackResult.cpp  Board.cpp  Board.h  Cell.cpp  Cell.h  CheatingAI.cpp  CheatingAI.h  Controller.cpp  Controller.h  EndGame.h  GameAttributes.cpp  HumanPlayer.cpp  HumanPlayer.h  HuntDestroyAI.cpp  HuntDestroyAI.h  Model.cpp  Model.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerConfiguration.cpp  PlayerConfiguration.h  RandomAI.cpp  RandomAI.h  ShipPlacement.cpp  ShipPlacement.h  StandardView.cpp  StandardView.h  Utility.h  View.cpp  View.h
